# Lore

./: .gitignore  README.md  TODO.md  config.yaml  eval_embeddings.py  eval_rerankers.py  pyproject.toml
.playwright/: cli.config.json
debug/: screenshot.py
docs/: api-reference.md  architecture.md  phase1-embedding-reranker-decisions.md  phase2-claude-code-speed-fix.md  phase2-provider-architecture.md  phase3-multi-hop-search.md
scripts/: batch_ingest.py  setup.sh
src/lore/: __main__.py  server.py
src/lore/api/: app.py  schemas.py
src/lore/api/routes/: chat.py  collections.py  health.py  ingest.py  providers.py  search.py
src/lore/core/: chunk.py  config.py  database.py  embed.py  enrich.py  entities.py  graph.py  ingest.py  search.py  store.py  transcribe.py
src/lore/core/extractors/: __init__.py  audio.py  code.py  epub.py  pdf.py  text.py  web.py
src/lore/mcp/: __init__.py  server.py
src/lore/providers/: base.py  codex.py  custom.py  kilo.py  opencode.py  registry.py
src/tutorialvault/: __init__.py  __main__.py  server.py
src/tutorialvault/api/: app.py  schemas.py
src/tutorialvault/api/routes/: chat.py  collections.py  health.py  providers.py  search.py  sessions.py
src/tutorialvault/core/: config.py  database.py  embed.py  ingest.py  search.py  store.py  transcribe.py
src/tutorialvault/providers/: claude_code.py  codex.py  custom.py  kilo.py  opencode.py  registry.py
tests/: bench_hybrid_search.py  bench_providers.py  eval_embeddings.py  eval_rerankers_v2.py  eval_transcription.py  eval_transcription_chunked.py  review_enrich_rework.py  review_ingest_pipeline.py  review_ingest_v2_adversarial.py  review_unreviewed_changes.py  test_01_database.py  test_02_providers_detect.py  test_03_provider_chat.py  test_04_search_api.py  test_05_transcribe.py  test_06_full_flow.py  test_07_multi_hop.py  test_08_all_providers.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.svelte  App.tsx  api.ts  app.css  index.css  store.ts  types.ts
ui/src-tauri/: tauri.conf.json
ui/src/components/: ChatView.css  ChatView.svelte  ChatView.tsx  IngestPanel.css  IngestPanel.svelte  IngestPanel.tsx  IngestView.css  IngestView.tsx  LibraryView.css  LibraryView.tsx  Sidebar.css  Sidebar.svelte  Sidebar.tsx  SourcePanel.css  SourcePanel.svelte  SourcePanel.tsx
ui/src/lib/: api.ts  stores.ts
