[project]
name = "tutorialvault"
version = "0.1.0"
description = "Universal knowledge base — turn any video, doc, or playlist into a searchable, chat-ready library"
requires-python = ">=3.10"
dependencies = [
    "lancedb>=0.20",
    "pyarrow>=17.0",
    "onnxruntime>=1.18",
    "tokenizers>=0.20",
    "huggingface-hub>=0.24",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "pandas>=2.0",
    "flashrank>=0.2",
]

[project.optional-dependencies]
# Full install with all features
all = [
    "tutorialvault[gpu,transcribe,ui,local]",
]
# GPU-accelerated ONNX inference
gpu = [
    "onnxruntime-gpu>=1.18",
]
# Whisper transcription (requires torch)
transcribe = [
    "faster-whisper>=1.0",
]
# Gradio web UI
ui = [
    "gradio>=5.0",
]
# Local GGUF inference
local = [
    "llama-cpp-python>=0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tutorialvault"]
