[project]
name = "lore"
version = "0.1.0"
description = "Universal knowledge base — turn any video, doc, or playlist into a searchable, chat-ready library"
requires-python = ">=3.10"
dependencies = [
    "lancedb>=0.20",
    "pyarrow>=17.0",
    "onnxruntime>=1.18",
    "tokenizers>=0.20",
    "huggingface-hub>=0.24",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "pandas>=2.0",
    "flashrank>=0.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "websockets>=12.0",
    "openai>=1.40",
    "sse-starlette>=2.0",
    "mcp[cli]>=1.9",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Full install with all features
all = [
    "lore[gpu,transcribe,local,enrich]",
]
# Enrichment (keywords, NER, summaries)
enrich = [
    "keybert>=0.8",
    "spacy>=3.7",
    "scikit-learn>=1.3",
]
# GPU-accelerated ONNX inference
gpu = [
    "onnxruntime-gpu>=1.18",
]
# Whisper transcription (requires torch)
transcribe = [
    "faster-whisper>=1.0",
]
# Local GGUF inference
local = [
    "llama-cpp-python>=0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lore"]
