[project]
name = "lore"
version = "0.1.0"
description = "Universal knowledge base — turn any video, doc, or playlist into a searchable, chat-ready library"
requires-python = ">=3.10"
dependencies = [
    "lancedb>=0.20",
    "pyarrow>=17.0",
    "onnxruntime>=1.18",
    "tokenizers>=0.20",
    "huggingface-hub>=0.24",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "pandas>=2.0",
    "flashrank>=0.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "openai>=1.40",
    "sse-starlette>=2.0",
    "mcp[cli]>=1.9",
    "python-dotenv>=1.0",
    "trafilatura>=1.6",
    "pymupdf>=1.24",
    "beautifulsoup4>=4.12",
    "ebooklib>=0.18",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Full install — everything needed for a working system on macOS Apple Silicon
all = [
    "lore[enrich,transcribe]",
]
# Enrichment (keywords, NER, summaries, entity merging)
enrich = [
    "keybert>=0.8",
    "spacy>=3.7",
    "scikit-learn>=1.3",
    "rapidfuzz>=3.0",
    "networkx>=3.0",
]
# Speech-to-text via ONNX Runtime (shared with embedding model)
transcribe = [
    "sherpa-onnx>=1.10",
]
# GPU-accelerated ONNX inference (Linux/Windows CUDA only, not macOS)
gpu = [
    "onnxruntime-gpu>=1.18",
]
# Local GGUF inference
local = [
    "llama-cpp-python>=0.3",
]

[project.scripts]
lore = "lore.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lore"]
